# headwind

./: .flake8  .gitignore  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/headwind/: cli.py  collector.py  config.py  executor.py  executor.pyi  git.py  report.py  spec.py  storage.py  test.py
src/headwind/templates/: base.html.j2  group.html.j2  index.html.j2  metric.html.j2
tests/: conftest.py  test_collector.py  test_git.py  test_result.json  test_run.py  test_spec.py  test_spec.yml  test_storage.py
workflows/: ci.yml
