[tool.poetry]
name = "headwind"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MIT"
packages = [
  { include = "headwind", from = "src" },
]

[tool.poetry.scripts]
hdw = 'headwind.cli:app'

[tool.poetry.dependencies]
python = ">=3.7.1"
click = "^7.1.2"
pydantic = "^1.7.3"
PyYAML = "^5.4.1"
typer = "^0.3.2"
wasabi = "^0.8.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
mypy = "^0.800"
tox = "^3.21.4"
tox-asdf = "^0.1.0"
flake8 = "^3.8.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
